# Tickets-Arcade

./: .gitignore  LICENSE  ROADMAP.md  ReadMe.md  SECURITY.md
.github/workflows/: codeql.yml  codeql2.yml
Documentation/: DRAND_Randomization.md
backend/: .env.example  Cargo.toml  README.md  TESTING.md  docker-compose.yml
backend/docs/: API.md  ARCHITECTURE.md  DATABASE_SCHEMA.md
backend/migrations/: 20250101000000_init.sql  20260102000000_randomness_provider.sql
backend/src/: api.rs  config.rs  indexer.rs  main.rs  state.rs
contracts/: .gitignore  README.md  SECURITY_REVIEW.md  hardhat.config.ts  package.json  pnpm-lock.yaml
contracts/contracts/: DrandRandomnessProvider.sol  IERC20Minimal.sol  IRandomnessProvider.sol  MockRandomnessProvider.sol  MockUSDC.sol  Raffle.sol  RaffleFactory.sol
contracts/docs/: CONTRACTS_OVERVIEW.md  SECURITY_MODEL.md
contracts/scripts/: deploy.ts
contracts/test/: Raffle.e2e.test.ts  Raffle.ranges.test.ts  Raffle.refund.test.ts  Raffle.security.test.ts
contracts/test/helpers/: fixtures.ts  types.ts
